Updated config file

--- a/etc/pac.conf
+++ b/etc/pac.conf
@@ -1,4 +1,18 @@
 # Pac Configuration File
+
+# The editor Pac uses
 EDITOR="nano"
-PAC_CACHE="/tmp/pac"
+# EDITOR="vim"
+# EDITOR="vi"
+# EDITOR="gedit"
+
+# The package manager you want pac to wrap
+# Warning, only pacman and yaourt have been tested
 PACKAGE_MANAGER="pacman"
+# PACKAGE_MANAGER="yaourt"
+# PACKAGE_MANAGER="pacaur"
+# PACKAGE_MANAGER="packer"
+# PACKAGE_MANAGER="aura"
+# PACKAGE_MANAGER="paktahn"
+# PACKAGE_MANAGER="pbfetch"
+# PACKAGE_MANAGER="trizen"
